fixed some overlays that overflowed

--- a/src/app/components/cards/positioncard.css
+++ b/src/app/components/cards/positioncard.css
@@ -217,10 +217,7 @@
   font-weight: var(--font-weight-medium, 500);
   line-height: 150%; /* 24px */
   letter-spacing: 0.2px;
-}
-
-.deleteButton:hover {
-  background-color: #fff8f8;
+  transition: background-color .3s, color .3s, border-color .3s;
 }
 
 .deleteButton.confirm {
@@ -282,6 +279,7 @@
   line-height: 150%; /* 24px */
   letter-spacing: 0.2px;
   border: 1px solid var(--base-secondary, #001a52);
+  transition: background-color .3s, color .3s, border-color .3s;
 }
 
 .add-position-button:hover path,
