--- a/src/app/components/form/popup.css
+++ b/src/app/components/form/popup.css
@@ -647,6 +647,36 @@
   letter-spacing: 0.2px;
 }
 
+.company-edit-button {
+  display: flex;
+height: var(--height-h-11, 44px);
+padding: var(--spacing-2, 8px) var(--spacing-4, 16px);
+justify-content: center;
+align-items: center;
+gap: var(--spacing-2, 8px);
+border-radius: var(--border-radius-full, 22px);
+border: 1px solid var(--base-secondary, #001A52);
+background: var(--base-background, #FFF);
+color: var(--base-secondary, #001A52);
+font-feature-settings: 'liga' off, 'clig' off;
+
+/* body/leading-normal/medium */
+font-family: var(--typography-font-family-font-sans, Inter);
+font-size: var(--typography-base-sizes-base-font-size, 16px);
+font-style: normal;
+font-weight: var(--font-weight-medium, 500);
+line-height: 150%; /* 24px */
+letter-spacing: 0.2px;
+cursor: pointer;
+transition: background-color .3s, color .3s, border-color .3s;
+}
+
+.company-edit-button:hover {
+  border: 1px solid var(--base-secondary, #001A52);
+background: var(--base-secondary, #001A52);
+color: var(--base-secondary-foreground, #FFF);
+}
+
 .skillsHeader {
   display: flex;
   justify-content: space-between;
